--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
     "name": "rickardpedersen/grupp-i-php-login",
     "require": {
         "vlucas/phpdotenv": "^4.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "classes\\": "classes"
+        }
     }
 }
