--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
         "psr-4": {
             "classes\\": "classes"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
     }
 }
